fix footer alignment

--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -6,6 +6,14 @@
     background-color: rgb(255, 255, 255, 0.5);
   }
 }
+/* @media screen and (max-width: 930px) {
+  .footer-edit {
+    justify-content: start;
+    flex-direction: column;
+    align-items: start;
+    gap: 0;
+  }
+} */
 @media screen and (max-width: 770px) {
   .bar {
     margin: 5px 0;
@@ -30,10 +38,16 @@
     background-color: rgb(255, 255, 255, 0.5);
   }
   .footer-edit {
-    justify-content: space-around;
+    /* justify-content: space-around; */
 
     align-items: center;
     flex-direction: row;
+  }
+  .footer-edit-home {
+    gap: 50px;
+  }
+  .footer-edit-service {
+    gap: 20px;
   }
   .footer-text {
     max-width: 80px;
